fixed add task modal on mobile

--- a/src/components/TaskForm/taskform.scss
+++ b/src/components/TaskForm/taskform.scss
@@ -1,11 +1,11 @@
 .tl-task__form-wrapper {
   border-top-left-radius: var(--tl-spacing-xl);
   position: fixed;
-  top: 0;
+  top: 75px;
   right: 0;
   height: 100vh;
   background-color: #fff;
-  width: 400px;
+  width: 100%;
   z-index: 99999;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
     }
   }
   .tl-task__form {
-    flex-grow: 1;
+    // flex-grow: 1;
     .tl-task__form-name-desc {
       padding: var(--tl-spacing-md);
       border-radius: var(--tl-spacing-s);
@@ -65,6 +65,7 @@
   }
   .tl-task__form-submit {
     display: flex;
+    flex-direction: column;
     padding: var(--tl-spacing-xl) var(--tl-spacing-2xl);
     background-color: var(--tl-theme-bg);
     gap: var(--tl-spacing-s);
@@ -80,7 +81,7 @@
 
     .tl-task__form-cancel,
     .tl-task__form-save {
-      width: 50%;
+      width: 100%;
     }
 
     .tl-btn {
@@ -89,6 +90,24 @@
       font-size: var(--tl-spacing-md);
       font-weight: 500;
       font-family: "Inter Display";
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .tl-task__form-wrapper {
+    width: 400px;
+    top: 0;
+    .tl-task__form {
+      flex-grow: 1;
+    }
+    .tl-task__form-submit {
+      flex-direction: row;
+
+      .tl-task__form-cancel,
+      .tl-task__form-save {
+        width: 50%;
+      }
     }
   }
 }
